Fixed clipped edges

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -85,10 +85,10 @@ img
   margin-top: 1.2rem
 
 img[src*="#clip-circle"]
-  -webkit-clip-path: circle(50% at 50% 50%)
-  clip-path: circle(50% at 50% 50%)
+  -webkit-clip-path: circle(45% at 50% 50%)
+  clip-path: circle(45% at 50% 50%)
   margin-top: 1rem
-  margin-bottom: 3rem
+  margin-bottom: 1rem
   max-width: 100%
   height: auto
 
